<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="getyourguide.mobile.ksh.berlintour.ReviewsListActivity">
    <item
        android:id="@+id/action_sorting"
        android:title="@string/sorting"
        android:icon="@drawable/sorting"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_filtering"
        android:title="@string/filtering"
        android:icon="@drawable/filtering"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_downloading"
        android:title="@string/downloading_reviews"
        android:icon="@drawable/downloading"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_writing"
        android:title="@string/write_review"
        android:icon="@drawable/writing"
        android:showAsAction="withText"/>
    <item
        android:id="@+id/action_pre_page"
        android:title="@string/pre_page"
        android:icon="@drawable/pre_page"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_next_page"
        android:title="@string/next_page"
        android:icon="@drawable/next_page"
        android:showAsAction="always"/>
</menu>
