<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_size">
    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_title"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/text_black"/>
        <EditText
            android:id="@+id/new_review_title"
            android:layout_marginLeft="@dimen/margin_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:maxLength="40"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <!--User Info-->
    <LinearLayout
        android:id="@+id/layout_detail"
        android:layout_below="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--UserName-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_user_name"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/text_black"/>
            <EditText
                android:id="@+id/new_review_name"
                android:layout_marginLeft="@dimen/margin_between"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_user_name"
                android:maxLength="20"
                android:textSize="@dimen/normal_text"
                android:textColor="@color/text_black"/>
        </LinearLayout>
        <!--Traveler Type-->
        <Button
            android:id="@+id/new_review_traveler_type"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_traveler_type"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/text_black"
            android:onClick="selectTravelerType"/>
        <!--User Country-->
        <Button
            android:id="@+id/new_review_country"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_user_country"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/text_black"
            android:onClick="selectCountry"/>
        <!-- Rating-->
        <Button
            android:id="@+id/new_review_rating"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_rating"
            android:textSize="@dimen/normal_text"
            android:textColor="@color/text_black"
            android:onClick="selectRating"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_submit"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/text_black"
        android:onClick="onSubmit"/>
    <EditText
        android:id="@+id/new_review_msg"
        android:layout_below="@id/layout_detail"
        android:layout_above="@id/btn_submit"
        android:layout_marginTop="@dimen/margin_between"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/hint_msg"
        android:textSize="@dimen/normal_text"
        android:textColor="@color/text_black"/>

</RelativeLayout>